--- a/index .html
+++ b/index .html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Raleway:wght@500&display=swap" rel="stylesheet">    <title>Document</title>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -156,7 +156,7 @@
 
 <script src="chart.js"></script>
 <script src="themes.js"></script>
-<script src="app.js"></script>
+<script src="main.js"></script>
 
 <!-- <script src="chart copy.js"></script> -->
 
