--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
         <source id="source-video" src="" type="video/webm">
     </video>
     <div class="container">
-        <form class="search">
-            <input class="search-bar" type="text" focus placeholder="Search Location">
-            <button class="search-btn">    
-                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 0.621);"><path d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"></path></svg>
-            </button>
-        </form>
+        <div class="search">
+            <form>
+                <input class="search-bar" type="text" focus placeholder="Search Location">
+                <button class="search-btn">    
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 0.621);"><path d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"></path></svg>
+                </button>
+            </form>
+        </div>
         <div class="forecast-now">
             <div class="left">
                 <div class="time" id="time"></div>      
