--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="container">
         <div class="redirect">
             <a href="https://github.com/zakiibnu723/Lively-Weather" class="github">
+                view github
                 <img src="./asset/icons8-github-120.svg" alt="Go to github">
             </a>
         </div>
