--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="redirect">
             <a href="https://github.com/zakiibnu723/Lively-Weather" class="github">
                 <img src="./asset/icons8-github-120.svg" alt="Go to github">
-                view github
+                <p>View Github</p>
             </a>
         </div>
         <div class="search">
