--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lively Weather</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="preloader.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Raleway:wght@500&display=swap" rel="stylesheet">    <title>Document</title>
